# ms-waitlist-notifier

./: .editorconfig  .gitignore  .prettierignore  .prettierrc.json  Dockerfile  Makefile  pyproject.toml
.github/workflows/: changelog.yaml  ci.yaml
src/notifier/: app.py  base.py  config.py  deps.py  mattermost.py
tests/: test_notifier.py
