[project]
name = "notifier"
version = "0.1.0"
description = "Notification micro-service for Scribe events"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.1",
    "uvicorn>=0.11.7",
    "httpx>=0.23.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0",
]

[project.scripts]
notifier = "notifier.app:main"

[tool.uv]
dev-dependencies = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "httpx>=0.23.0",
    "ruff>=0.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/notifier"]

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
